-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: openjdk8u-jfr-incubator
-
Component/s: hotspot
-
Environment:
Zero
-
b15
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8203980 | 11.0.1 | Severin Gehwolf | P4 | Resolved | Fixed | team |
| JDK-8240387 | openjdk8u262 | Severin Gehwolf | P4 | Resolved | Fixed | team |
1) ------------------------------------------------------
Building target 'images' in configuration 'linux-x86_64-normal-zero-fastdebug'
/home/shade/jdk-jdk/src/hotspot/share/jfr/periodic/sampling/jfrCallTrace.cpp: In member function 'bool JfrGetCallTrace::get_topframe(void*, frame&)':
/home/shade/jdk-jdk/src/hotspot/share/jfr/periodic/sampling/jfrCallTrace.cpp:99:17: error: 'class JavaThread' has no member named 'pd_get_top_frame_for_profiling'; did you mean 'pd_get_top_frame_for_signal_handler'?
if (!_thread->pd_get_top_frame_for_profiling(&topframe, ucontext, _in_java)) {
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2) ------------------------------------------------------
/home/shade/jdk-jdk/src/hotspot/share/jfr/utilities/jfrTime.cpp:29:25: fatal error: rdtsc_x86.hpp: No such file or directory
#include "rdtsc_x86.hpp"
^
compilation terminated.
3) ------------------------------------------------------
/home/shade/jdk-jdk/src/hotspot/os/linux/os_perf_linux.cpp:33:34: fatal error: vm_version_ext_x86.hpp: No such file or directory
#include "vm_version_ext_x86.hpp"
^
compilation terminated.
Building target 'images' in configuration 'linux-x86_64-normal-zero-fastdebug'
/home/shade/jdk-jdk/src/hotspot/share/jfr/periodic/sampling/jfrCallTrace.cpp: In member function 'bool JfrGetCallTrace::get_topframe(void*, frame&)':
/home/shade/jdk-jdk/src/hotspot/share/jfr/periodic/sampling/jfrCallTrace.cpp:99:17: error: 'class JavaThread' has no member named 'pd_get_top_frame_for_profiling'; did you mean 'pd_get_top_frame_for_signal_handler'?
if (!_thread->pd_get_top_frame_for_profiling(&topframe, ucontext, _in_java)) {
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2) ------------------------------------------------------
/home/shade/jdk-jdk/src/hotspot/share/jfr/utilities/jfrTime.cpp:29:25: fatal error: rdtsc_x86.hpp: No such file or directory
#include "rdtsc_x86.hpp"
^
compilation terminated.
3) ------------------------------------------------------
/home/shade/jdk-jdk/src/hotspot/os/linux/os_perf_linux.cpp:33:34: fatal error: vm_version_ext_x86.hpp: No such file or directory
#include "vm_version_ext_x86.hpp"
^
compilation terminated.
- backported by
-
JDK-8203980 Zero fails to build after JDK-8199712 (Flight Recorder)
-
- Resolved
-
-
JDK-8240387 Zero fails to build after JDK-8199712 (Flight Recorder)
-
- Resolved
-
-
JDK-8243900 Zero fails to build after JDK-8199712 (Flight Recorder)
-
- Resolved
-
- duplicates
-
JDK-8229816 Fix Zero builds in JFR backport
-
- Closed
-
- relates to
-
JDK-8203288 PPC64 and s390 fail to build after JDK-8199712 (Flight Recorder)
-
- Resolved
-
-
JDK-8199712 Flight Recorder
-
- Closed
-
(1 relates to)