8203287: Zero fails to build after JDK-8199712 (Flight Recorder)

Reviewed-by: shade, mdoerr